# Nordic_blinky

./: CMakeLists.txt  Nordic_blinky.h  main.cpp
